# StreamEP

./: .gitignore  CHANGES.md  NOTICE.md  README.md  pyproject.toml  setup.py
csrc/: config.hpp  deep_ep.cpp  deep_ep.hpp  event.hpp  stream_ep.cpp  stream_ep.hpp
csrc/kernels/: CMakeLists.txt  api.cuh  buffer.cuh  configs.cuh  ibgda_device.cuh  internode.cu  intranode.cu  launch.cuh  runtime.cu  utils.cuh
deep_ep/: __init__.py  buffer.py
deep_ep.egg-info/: PKG-INFO  SOURCES.txt
stream_ep/: __init__.py  buffer.py  utils.py
stream_ep/stream_moe/: __init__.py  bench_kernel_a.py  bench_pipeline.py  epi_ops.py  kernel_a.py  kernel_a_bwd.py  kernel_y.py  kernel_y_bwd.py  ncu_microbench.py  nsys_pipeline.py  (+23 more)
tests/: test_activation_checkpoint.py  test_combine.py  test_combine_grads.py  test_combine_internode.py  test_dispatch.py  test_dispatch_grads.py  test_dispatch_grads_internode.py  test_dispatch_grads_stress.py  test_dispatch_internode.py  test_internode.py  test_low_latency.py  test_metadata.py  test_multi_dispatch.py  test_pipeline_depth_stress.py  test_skewed_experts.py  test_streaming_cached_notify_combine_internode.py  test_streaming_combine.py  test_streaming_combine_grads.py  test_streaming_combine_internode.py  test_streaming_count_exchange.py  test_streaming_dispatch.py  test_streaming_dispatch_grads.py  test_streaming_dispatch_grads_internode.py  test_streaming_dispatch_internode.py  test_streaming_intranode.py  test_streaming_metadata_internode.py  test_streaming_multi_dispatch.py  test_streaming_slot_assign.py  test_uneven_tokens_per_rank.py  utils.py
(+10 files in other folders)
