[build-system]
# stream-ep's setup.py imports `torch.utils.cpp_extension.{BuildExtension,CUDAExtension}`
# at the top, so torch must be importable when uv prepares the wheel metadata.
# Consumers (evoscale) install with `no-build-isolation = ["stream-ep"]` so the
# env's already-pinned torch (cu128 ABI) is used directly; the requires line
# below documents the contract and lets pure-isolation builds find the deps too.
requires = ["setuptools>=61", "wheel", "torch>=2.8,<2.9"]
build-backend = "setuptools.build_meta"

[project]
name = "stream-ep"
version = "0.1.1"
# Declared explicitly so uv installs torch FIRST (the env's existing pin) and
# stream-ep's setup.py can import it at metadata-prep time under
# no-build-isolation. Without this, uv has no dep edge to enforce ordering.
dependencies = ["torch>=2.8,<2.9"]

[tool.yapf]
based_on_style = "pep8"
column_limit = 140
indent_width = 4

[tool.ruff.lint]
select = [
    # pycodestyle
    "E", "W",
    # Pyflakes
    "F",
    # pyupgrade
    # "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    # "I",
]
ignore = [
    # Module level import not at top of file
    "E402",
    # star imports
    "F405", "F403",
    # ambiguous name
    "E741",
    # line too long
    "E501",
    # key in dict.keys()
    "SIM118",
    # memory leaks
    "B019",
    # No such file or directory
    "E902",
]
exclude = [
    "stream_ep/__init__.py"
]